; ModuleID = '/home/carl/AnghaBench/vlc/modules/codec/extr_stl.c_ParseTimeCode.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/codec/extr_stl.c_ParseTimeCode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, double)* @ParseTimeCode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ParseTimeCode(i32* %0, double %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca double, align 8
  store i32* %0, i32** %3, align 8
  store double %1, double* %4, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = getelementptr inbounds i32, i32* %5, i64 0
  %7 = load i32, i32* %6, align 4
  %8 = mul nsw i32 %7, 3600
  %9 = load i32*, i32** %3, align 8
  %10 = getelementptr inbounds i32, i32* %9, i64 1
  %11 = load i32, i32* %10, align 4
  %12 = mul nsw i32 %11, 60
  %13 = add nsw i32 %8, %12
  %14 = load i32*, i32** %3, align 8
  %15 = getelementptr inbounds i32, i32* %14, i64 2
  %16 = load i32, i32* %15, align 4
  %17 = mul nsw i32 %16, 1
  %18 = add nsw i32 %13, %17
  %19 = sitofp i32 %18 to double
  %20 = load i32*, i32** %3, align 8
  %21 = getelementptr inbounds i32, i32* %20, i64 3
  %22 = load i32, i32* %21, align 4
  %23 = sitofp i32 %22 to double
  %24 = load double, double* %4, align 8
  %25 = fdiv double %23, %24
  %26 = fadd double %19, %25
  %27 = fptosi double %26 to i32
  %28 = call i32 @vlc_tick_from_sec(i32 %27)
  ret i32 %28
}

declare dso_local i32 @vlc_tick_from_sec(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
